[package]
name = "advance-iter"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
description = "A small crate to help with \"stepping through\" iterators."
repository = "https://github.com/AsterixxxGallier/advance-iter"
readme = "README.md"
keywords = ["utility", "iterator"]
categories = ["rust-patterns"]

[dependencies]
